--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
                     <div class="link">
                       <label>Email</label>
                       <a
-                        title="francesco.cirillo@wiwaag.ch"
-                        href="mailto:francesco.cirillo@wiwaag.ch"
-                        >francesco.cirillo@wiwaag.ch</a
+                        title="f.cirillo@wiwabau.ch"
+                        href="mailto:f.cirillo@wiwabau.ch"
+                        >f.cirillo@wiwabau.ch</a
                       >
                     </div>
                   </li>
@@ -92,10 +92,10 @@
                     <div class="link">
                       <label>Company Website</label>
                       <a
-                        title="www.wiwaag.ch"
+                        title="www.wiwabau.ch"
                         target="_blank"
-                        href="https://www.wiwaag.ch/"
-                        >www.wiwaag.ch</a
+                        href="https://www.wiwabau.ch/"
+                        >www.wiwabau.ch</a
                       >
                     </div>
                   </li>
